@@ -1,6 +1,8 @@
 0.24
  - Add Czech description to
    Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
+ - Add doc for
+   Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
  - Change alias from 'pes' to 'pes domácí' in
    Test::Shared::Fixture::Wikibase::Datatype::Item::Wikidata::Dog.
  - Sort labels in
